--- a/AvaloniaApplication7/AvaloniaApplication7.csproj
+++ b/AvaloniaApplication7/AvaloniaApplication7.csproj
@@ -22,6 +22,8 @@
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+        <PackageReference Include="SecureStorage" Version="1.24.3.14" />
+        <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
     </ItemGroup>
 </Project>
